--- a/HW10/hw_project/quotes/templates/quotes/index.html
+++ b/HW10/hw_project/quotes/templates/quotes/index.html
@@ -1,15 +1,15 @@
 {% extends 'quotes/base.html' %}
 
 
-{% block content %}
+{% block body %}
 
 <div class="row">
     <div class="col-md-8">
     {%  for quote in quotes %}
     <div class="quote" itemscope="" itemtype="http://schema.org/CreativeWork">
         <span class="text" itemprop="text">{{quote.quote}}</span>
-        <span>by <small class="author" itemprop="author">{{quote.author}}</small>
-        <a href="/author/{{quote.author}}">(about)</a>
+        <span>by <small class="author" itemprop="author">{{quote.author.fullname}}</small>
+        <a href="/author/{{quote.author.fullname}}">(about)</a>
         </span>
         <div class="tags">
             Tags:
