--- a/HW10/hw_project/quotes/templates/quotes/base.html
+++ b/HW10/hw_project/quotes/templates/quotes/base.html
@@ -8,29 +8,41 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'quotes/style.css' %}">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </head>
+
 <body>
+    
     <div class="container">
+        
         <div class="row header-box pt-3">
+
             <div class="col-md-8">
                 <h1>
                     <a href="/" style="text-decoration: none">Quotes to Scrape</a>
                 </h1>
             </div>
             <div class="col-md-4">
-                <p>
-                
-                    <a href="/login" class="btn btn-primary">Signin</a>
-                    <a href="/login" class="btn btn-primary">Login</a>
-                    <a href="/login" class="btn btn-primary">Logout</a>
-                
-                </p>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+                {% if user.is_authenticated %}
+                <div class="d-flex"><a class="nav-link" href="{% url 'users:logout' %}">Logout</a></div>
+
+                {% else %}
+                <a class="nav-link" href="{% url 'users:signup' %}">Register</a>
+                <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+                {% endif %}
             </div>
         </div>
-    
-        {% block content %} {% endblock %}
+  
+        {% block body %} {% endblock %}
 
     </div>
 </body>
+
 </html>
