--- a/HW10/hw_project/users/templates/users/logout.html
+++ b/HW10/hw_project/users/templates/users/logout.html
@@ -2,6 +2,6 @@
 
 {% block body %}
     <div class="container mt-3">
-        <h1>Повертайся</h1>
+        <h1>Повертайтесь будь ласка!</h1>
     </div>
 {% endblock %}
