--- a/HW10/hw_project/quotes/templates/quotes/index.html
+++ b/HW10/hw_project/quotes/templates/quotes/index.html
@@ -14,7 +14,7 @@
         <div class="tags">
             Tags:
             {% for tag in quote.tags %}      
-            <a class="tag" href="/tag/{{tag}}">{{tag}}</a>
+            <a class="tag" >{{tag}}</a>
             {% endfor %}
         </div>
     </div>
