--- a/HW10/hw_project/quotes/templates/quotes/base.html
+++ b/HW10/hw_project/quotes/templates/quotes/base.html
@@ -33,7 +33,7 @@
                 {% if user.is_authenticated %}
                 <div class="d-flex"><a class="nav-link" href="{% url 'users:logout' %}">Logout</a></div>
                 <div class="d-flex"><a class="nav-link" href="{% url 'quotes:author' %}">Add author</a></div>
-
+                <div class="d-flex"><a class="nav-link" href="{% url 'quotes:quote' %}">Add quote</a></div>
                 {% else %}
                 <a class="nav-link" href="{% url 'users:signup' %}">Register</a>
                 <a class="nav-link" href="{% url 'users:login' %}">Login</a>
